<resources>
    <string name="acb_title_bar_back">返回</string>
    <string name="add_rescue_info">添加救援信息</string>
    <string name="agreement">免责声明</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_clean">清空</string>
    <string name="alert_clear_history_des">是否确认清空历史目的地</string>
    <string name="alert_close">知道了</string>
    <string name="alert_common_data_not_download">必须下载全国基础包，才可以使用离线功能。</string>
    <string name="alert_confirm">确定</string>
    <string name="alert_confirm_a">我知道了</string>
    <string name="alert_continue_last_navi_tips">是否继续上一次导航</string>
    <string name="alert_delete">是否确认删除？</string>
    <string name="alert_delete_comp_addr">确定要删除“公司”的当前地址吗？</string>
    <string name="alert_delete_home_addr">确定要删除“家”的当前地址吗？</string>
    <string name="alert_delete_navi_cache">删除导航缓存</string>
    <string name="alert_delete_navi_cache_content">您确定要删除导航缓存吗？</string>
    <string name="alert_disclaimer">免责声明</string>
    <string name="alert_download_apk_title">下载更新</string>
    <string name="alert_engine_init_failed">初始化失败，请先检查sd卡是否有足够空间或者尝试重启手机</string>
    <string name="alert_exit_cur_navi">是否取消当前导航？</string>
    <string name="alert_goto_download">去下载</string>
    <string name="alert_gps_not_open_and_set">需要开启GPS哦，否则小度无法定位</string>
    <string name="alert_gps_setting">去设置</string>
    <string name="alert_i_know">我知道了</string>
    <string name="alert_know">知道了</string>
    <string name="alert_no_net_data_info">网络连接失败!\n\n请检查网络连接或登录官方网站下载离线地图数据</string>
    <string name="alert_no_sdcard">SD卡异常，请退出程序检查SD卡设置！</string>
    <string name="alert_no_valid_data_info">没有地图数据\n\n您可以根据需要选择省份下载地图，或直接在线使用</string>
    <string name="alert_notification">提示</string>
    <string name="alert_online_use">在线使用</string>
    <string name="alert_quit">退出</string>
    <string name="alert_quit_app_content">您确定要退出CarLife吗？</string>
    <string name="alert_retry">重试</string>
    <string name="alert_sdcard_cannot_use">您的SD卡不可用，请检查SD卡！</string>
    <string name="alert_sdcard_no_choose">请先选择数据存放路径</string>
    <string name="alert_setting">设置</string>
    <string name="alert_title_choose_sdcard">选择存储卡</string>
    <string name="alert_update_apk_no_network">网络已经断开，无法完成软件升级，你可以打开网络以后在关于页面完成软件升级。</string>
    <string name="alert_update_apk_now">立即更新</string>
    <string name="alert_update_apk_title">版本更新</string>
    <string name="app_name">百度 CarLife</string>
    <string name="auth_click">点击确定</string>
    <string name="auth_msg">为确保连接成功，请允许CarLife的授权请求</string>
    <string name="auth_title">授权请求</string>
    <string name="auto_mode">自动</string>
    <string name="bdim_error">无法响应操作，请重新连接或重启手机！</string>
    <string name="bnav_string_nav_node_company">公司</string>
    <string name="bnav_string_nav_node_home">家</string>
    <string name="bnav_string_rg_unknown_road">未知路</string>
    <string name="bnav_string_route_plan_map_point">地图上的点</string>
    <string name="bnav_string_route_plan_node_my_pos">我的位置</string>
    <string name="btn_call">呼叫</string>
    <string name="button_ok">OK</string>
    <string name="cancel_download">是否取消下载？</string>
    <string name="car_navi_failed_to_init_tts">语音播报模块初始化失败</string>
    <string name="carlife_feedback_contact">联系方式</string>
    <string name="carlife_feedback_contact_email">官方邮箱：CarLife@baidu.com</string>
    <string name="carlife_feedback_contact_qq">用户反馈QQ群: 419328050</string>
    <string name="carlife_feedback_content_hint">请填写您在使用CarLife期间遇到的问题和建议。如涉及到手机-车机互联状态下的问题，请详细描述具体的汽车品牌和车型</string>
    <string name="carlife_feedback_content_num_count">/400</string>
    <string name="carlife_feedback_email_hint">填写您的手机号或邮箱</string>
    <string name="carlife_feedback_function_excetion">功能异常</string>
    <string name="carlife_feedback_function_suggest">功能建议</string>
    <string name="carlife_feedback_other_question">其他问题</string>
    <string name="carlife_feedback_photo_question">上传问题图片 (单张图片少于2M)</string>
    <string name="carlife_map_car_plate_digits">0123456789abcdefghigklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="carlife_map_ctrl_address">常用地址</string>
    <string name="carlife_map_ctrl_around">搜周边</string>
    <string name="carlife_map_ctrl_cruise">电子狗</string>
    <string name="carlife_map_ctrl_favorite">收藏夹</string>
    <string name="carlife_map_ctrl_its">实时路况</string>
    <string name="carlife_map_ctrl_search_around">搜索目的地</string>
    <string name="carlife_map_data_NO_WIFI">非WiFi，已暂停，剩</string>
    <string name="carlife_map_data_auto_download">Wi-Fi下自动更新</string>
    <string name="carlife_map_data_auto_download_hint">最新离线包，图最新，点最全，搜索更便捷</string>
    <string name="carlife_map_data_cancel">取消</string>
    <string name="carlife_map_data_china_hint">(离线必备，勿删)</string>
    <string name="carlife_map_data_chose_city">选择城市</string>
    <string name="carlife_map_data_city">当前城市</string>
    <string name="carlife_map_data_city_downloaded">该城市已下载</string>
    <string name="carlife_map_data_cityall">全部城市</string>
    <string name="carlife_map_data_comfirm">确认</string>
    <string name="carlife_map_data_delete">你要删除该地图?</string>
    <string name="carlife_map_data_download">正在下载，剩</string>
    <string name="carlife_map_data_download_city">该城市正在下载</string>
    <string name="carlife_map_data_download_finish">下载完成</string>
    <string name="carlife_map_data_download_hint">基础必备包，请勿删除！</string>
    <string name="carlife_map_data_download_manager">离线地图</string>
    <string name="carlife_map_data_downloaded">已下载</string>
    <string name="carlife_map_data_downloading">正在下载</string>
    <string name="carlife_map_data_finish">完成</string>
    <string name="carlife_map_data_hint">输入城市名称或首字母</string>
    <string name="carlife_map_data_need_update">有更新，只需</string>
    <string name="carlife_map_data_net_error">网络异常，剩</string>
    <string name="carlife_map_data_parse">正在解压缩...</string>
    <string name="carlife_map_data_pause">已暂停，剩</string>
    <string name="carlife_map_data_update">正在更新，剩</string>
    <string name="carlife_map_data_waiting_download">等待下载，剩</string>
    <string name="carlife_map_data_waiting_update">等待更新，剩</string>
    <string name="carlife_person_ctrl_about">关于</string>
    <string name="carlife_person_ctrl_help">帮助反馈</string>
    <string name="carlife_person_ctrl_journey_setting">行程设置</string>
    <string name="carlife_person_ctrl_map_setting">地图设置</string>
    <string name="carlife_person_ctrl_voice_setting">语音设置</string>
    <string name="carlife_update_backstage">后台升级</string>
    <string name="carlife_update_cancel">取消</string>
    <string name="carlife_update_click_to_install">点击安装</string>
    <string name="carlife_update_download_again">当前升级包有误，请稍后重试</string>
    <string name="carlife_update_download_failed_dialog_content">由于网络问题未成功下载</string>
    <string name="carlife_update_download_failed_dialog_retry">重新下载</string>
    <string name="carlife_update_download_failed_dialog_title">下载失败</string>
    <string name="carlife_update_download_finish">CarLife 下载完成</string>
    <string name="carlife_update_no_network">网络未连接，请检查网络后重试</string>
    <string name="carlife_update_no_new_version">当前应用已经是最新版本</string>
    <string name="carlife_update_tips_dialog_cancel">以后再说</string>
    <string name="carlife_update_tips_dialog_confirm">马上更新</string>
    <string name="carlife_update_tips_dialog_exit">退出</string>
    <string name="carlife_update_tips_dialog_title">更新提示</string>
    <string name="carlife_update_wait_for_complete">请等待当前更新完成</string>
    <string name="carmode_default_tip_in_edittext">请输入目的地</string>
    <string name="carmode_go_company">去公司</string>
    <string name="carmode_go_home">回家</string>
    <string name="carmode_order">排序</string>
    <string name="check_all_items">全选</string>
    <string name="check_update">检查更新</string>
    <string name="checking_update">正在检查更新...</string>
    <string name="command_error_please_retry">输入指令不正确，请重新输入</string>
    <string name="common_error_empty">小度已经尽力，请重试</string>
    <string name="common_error_nogps">小度提醒您，请检查GPS设置</string>
    <string name="common_error_nonetwork">小度提醒您，请检查网络</string>
    <string name="common_tip_reload">刷新</string>
    <string name="commonquestion_setting_title">常见问题</string>
    <string name="complete_rescue_info">完善救援信息，为您的救援节约宝贵时间</string>
    <string name="component_radar_tips_net_fail">网络不可用，请检查后重试</string>
    <string name="disclaimer">免责声明</string>
    <string name="disclaimer_agree">同意</string>
    <string name="disclaimer_notip">下次不再提醒</string>
    <string name="feedback_commit">提交</string>
    <string name="feedback_email_hint_carmode">请留下您的联系方式(必填项)</string>
    <string name="sapi_app_name">SAPI V6</string>
    <string name="sapi_common_loading_timeout">网络连接失败，请稍后重试</string>
    <string name="sapi_common_retry_btn_text">重试</string>
    <string name="sapi_common_setting_btn_text">设置</string>
    <string name="wifi_helper_alert_msg">为您连接正规WIFI热点,保障信息安全</string>
    <string name="wifi_helper_alert_title">是否安装免费WIFI插件</string>
    <string name="wifi_helper_negative">安装(0.5M)</string>
    <string name="wifi_helper_positive">取消</string>
    <string name="common_goto_home">前往首页</string>
    <string name="common_goto_map">前往地图</string>
    <string name="common_goto_music">前往音乐</string>
    <string name="common_goto_phone">前往电话</string>
    <string name="commonquestion_answer1">由于现代朗动车机的问题，导致安卓7.0手机无法连接，该问题已经修复。</string>
    <string name="commonquestion_answer12">请联系朗动客服免费进行车载系统的升级。\n联系方式：奇华环宇客服电话 010-8984-9950（郑雪红），\n若您不方便前往4S店，请添加客服QQ 2127573418，将免费提供自助升级的教程。</string>
    <string name="commonquestion_answer2">小米手机开启神隐模式后，会导致运行在后台的CarLife GPS信号弱。按以下方式操作：</string>
    <string name="commonquestion_answer22">a）在“设置”&gt;“电量和性能”&gt;“神隐模式”&gt;“应用配置”中找到 “CarLife”，点击后选择“无限制”；</string>
    <string name="commonquestion_answer23">b）在“设置”&gt;“电量和性能”&gt;“神隐模式”中选择“关闭”；</string>
    <string name="commonquestion_answer3">在华为手机“设置”&gt;“开发者选项”中，打开“USB调试模式”和“仅充电模式下允许ADB调试”开关。</string>
    <string name="commonquestion_answer32">若找不到“开发者选项”，在“设置”&gt;“关于手机”中找到“版本号”，连续点击“版本号”5-7次。</string>
    <string name="commonquestion_answer33">若仍连接不上，请联系我们CarLife@baidu.com</string>
    <string name="commonquestion_question1">1. 现代朗动车型无法连接安卓7.0手机？</string>
    <string name="commonquestion_question2">2. 小米手机经常出现GPS信号弱的问题？</string>
    <string name="commonquestion_question3">3. 华为安卓7.0手机无法连接车机？</string>
    <string name="disclaimer_content">在您使用百度CarLife（以下简称百度）前，请您务必仔细阅读并透彻理解本声明内容。一旦您选择使用本产品，即表示您认可并接受本产品服务条款现有内容及其可能随时更新的内容：\n 1.在驾驶途中请勿操作本产品，以防发生交通事故或其他危险情况。否则由此造成的安全事故将由自身承担。\n 2.请以实际交通状况为主，勿将本产品提供的地图导航服务作为您出行与驾驶的的唯一依据。任何违反交通法规或其他法律规定的行为将由自行承担责任。\n 3.百度尊重并保护所有使用百度用户的个人隐私权，除非经您亲自许可，或根据相关法律、法规的强制性规定须披露外，百度不会主动地泄露、转让、提供给第三方。\n 4.除非特别说明，百度向您提供的服务均为免费。某些服务需要电话、数据访问或短信功能支持，您可能需要支付给第三方相应费用。\n 5.使用百度接入第三方的产品和服务代表您认可并同意第三方的服务条款，请您仔细查阅第三方相关政策，对第三方提供的产品和服务，百度不承担任何责任。\n *详细内容请查看【我的-设置-关于中的服务条款】</string>
    <string name="feedback_content_num_count">0/300</string>
    <string name="feedback_content_title">请详细描述您的意见</string>
    <string name="feedback_type">请选择问题类别</string>
    <string name="feedback_type_location">定位不准</string>
    <string name="feedback_type_mapshow">地图显示不流畅</string>
    <string name="feedback_type_other">其他</string>
    <string name="feedback_type_plan">规划路线不合理</string>
    <string name="feedback_type_point">地点错误</string>
    <string name="feedback_type_road">道路错误</string>
    <string name="home_food_queuetype">餐桌类型</string>
    <string name="home_food_queuewaitnum">等待桌数</string>
    <string name="home_food_queuewaitnum1">前面还有</string>
    <string name="home_food_queuewaittime">预计等待</string>
    <string name="home_food_ququeid">排队号码</string>
    <string name="map_go_company">去公司</string>
    <string name="map_go_home">回家</string>
    <string name="map_go_other">我要去世界之窗</string>
    <string name="map_nearby_bank">附近的银行</string>
    <string name="map_nearby_oil">附近的加油站</string>
    <string name="map_nearby_school">附近的学校</string>
    <string name="map_nearby_supermarket">附近的超市</string>
</resources>