<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/common_title_bar" layout="@layout/carlife_common_title_bar_new"/>
    <ScrollView android:id="@+id/scroll_view" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/common_title_bar" android:overScrollMode="never">
        <LinearLayout android:orientation="vertical" android:paddingLeft="80dp" android:paddingRight="80dp" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="18sp" android:textColor="@color/cl_text_a5_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/commonquestion_question1"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/commonquestion_answer1"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/commonquestion_answer12"/>
            <TextView android:textSize="18sp" android:textColor="@color/cl_text_a5_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/commonquestion_question2"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/commonquestion_answer2"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/commonquestion_answer22"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/commonquestion_answer23"/>
            <TextView android:textSize="18sp" android:textColor="@color/cl_text_a5_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/commonquestion_question3"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/commonquestion_answer3"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/commonquestion_answer32"/>
            <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/commonquestion_answer33"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
