<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/map_go_company"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/map_go_home"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/map_go_other"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/map_nearby_bank"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/map_nearby_oil"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/map_nearby_school"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/map_nearby_supermarket"/>
</LinearLayout>
