<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/common_goto_home"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/common_goto_phone"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/common_goto_map"/>
    <TextView android:textSize="36sp" android:textColor="@color/cl_text_a5_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/common_goto_music"/>
</LinearLayout>
