<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:paddingTop="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/home_food_ququeid" style="@style/FoodQueuesTitle"/>
        <TextView android:text="@string/home_food_queuewaitnum1" style="@style/FoodQueuesTitle"/>
        <TextView android:text="@string/home_food_queuewaittime" style="@style/FoodQueuesTitle"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="10dp">
        <TextView android:id="@+id/tv_queue_name" style="@style/FoodQueuesContent"/>
        <TextView android:id="@+id/tv_queue_waitnum" style="@style/FoodQueuesContent"/>
        <TextView android:id="@+id/tv_queue_waittime" style="@style/FoodQueuesContent"/>
    </LinearLayout>
</LinearLayout>
