<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/cl_bg_c_main" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24sp" android:textColor="@color/cl_text_a4_content" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:layout_marginBottom="20dp" android:text="@string/disclaimer"/>
    <ScrollView android:id="@+id/scroll_view" android:background="@drawable/common_btn_bg_focus" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_marginLeft="72dp" android:layout_marginRight="72dp" android:layout_weight="0.9">
        <TextView android:textSize="18sp" android:textColor="@color/cl_text_a5_content" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/disclaimer_content" android:lineSpacingMultiplier="1.2"/>
    </ScrollView>
    <TextView android:textSize="16sp" android:textColor="@color/cl_text_a2_content" android:gravity="center_vertical" android:id="@+id/notip_tv" android:background="@drawable/common_btn_bg_focus" android:paddingRight="4dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="64dp" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" android:text="@string/disclaimer_notip" android:drawableLeft="@drawable/com_ic_unchecked"/>
    <Button android:textSize="16sp" android:textColor="@color/cl_text_a5_bgtext" android:layout_gravity="center_horizontal" android:id="@+id/agree_btn" android:background="@drawable/com_bg_btn_b_selector" android:focusable="true" android:layout_width="136dp" android:layout_height="44dp" android:layout_marginBottom="24dp" android:text="@string/disclaimer_agree"/>
</LinearLayout>
