<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@color/sapi_background_color" android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sapi_icon_connection_failed" android:contentDescription="@string/sapi_app_name"/>
    <TextView android:textSize="14sp" android:textColor="@color/sapi_edit_neting_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sapi_common_loading_timeout"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/btn_retry" android:background="@drawable/sapi_btn_selector" android:clickable="true" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginTop="10dp" android:layout_weight="0.5">
            <TextView android:textSize="16sp" android:textColor="@color/sapi_btn_text_color" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sapi_common_retry_btn_text" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <View android:layout_width="8dp" android:layout_height="44dp"/>
        <RelativeLayout android:id="@+id/btn_network_settings" android:background="@drawable/sapi_btn_selector" android:visibility="gone" android:clickable="true" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginTop="10dp" android:layout_weight="0.5">
            <TextView android:textSize="16sp" android:textColor="@color/sapi_btn_text_color" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sapi_common_setting_btn_text" android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
