<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="#ff23262d" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="60dp">
            <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:footerDividersEnabled="true">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:background="#373c44" android:layout_width="match_parent" android:layout_height="60dp">
                        <ImageView android:id="@+id/imageview_edittext_content" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:src="@drawable/car_mode_feedback_write" android:layout_centerVertical="true"/>
                        <EditText android:textSize="20sp" android:textColor="@color/carmode_common_bg" android:gravity="top|left|center_vertical|center_horizontal|center" android:id="@+id/edittext_content" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:hint="@string/feedback_content_title" android:singleLine="true" android:layout_toRightOf="@+id/imageview_edittext_content" android:layout_centerVertical="true" android:textCursorDrawable="@null"/>
                        <TextView android:textSize="14sp" android:textColor="#787d8c" android:id="@+id/edittext_content_num_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/feedback_content_num_count" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <GridView android:gravity="left" android:id="@+id/gridView" android:background="@color/carmode_common_bg" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginLeft="0dp" android:layout_marginTop="0dp" android:layout_marginBottom="0dp" android:listSelector="@android:color/transparent" android:horizontalSpacing="0dp" android:verticalSpacing="0dp" android:stretchMode="columnWidth" android:numColumns="4"/>
                    <TextView android:textSize="16sp" android:textColor="#787d8c" android:gravity="center_vertical" android:id="@+id/feedback_type_title" android:background="@drawable/feedback_type_normal_night" android:paddingLeft="15dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="0dp" android:text="@string/feedback_type" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
                    <LinearLayout android:orientation="vertical" android:id="@+id/feedback_type_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <LinearLayout android:orientation="horizontal" android:id="@+id/feedback_type_layout_top" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="0dp" android:layout_marginRight="0dp">
                            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                                <TextView android:gravity="center" android:id="@+id/feedback_type_location" android:background="@drawable/feedback_type_normal_night" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/feedback_type_location" style="@style/Text.CarModeAboutButtonText"/>
                                <TextView android:gravity="center" android:id="@+id/feedback_type_point" android:background="@drawable/feedback_type_normal_night" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/feedback_type_point" style="@style/Text.CarModeAboutButtonText"/>
                            </LinearLayout>
                            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                                <TextView android:gravity="center" android:id="@+id/feedback_type_mapshow" android:background="@drawable/feedback_type_normal_night" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/feedback_type_mapshow" style="@style/Text.CarModeAboutButtonText"/>
                                <TextView android:gravity="center" android:id="@+id/feedback_type_plan" android:background="@drawable/feedback_type_normal_night" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/feedback_type_plan" style="@style/Text.CarModeAboutButtonText"/>
                            </LinearLayout>
                            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                                <TextView android:gravity="center" android:id="@+id/feedback_type_road" android:background="@drawable/feedback_type_normal_night" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/feedback_type_road" style="@style/Text.CarModeAboutButtonText"/>
                                <TextView android:gravity="center" android:id="@+id/feedback_type_other" android:background="@drawable/feedback_type_normal_night" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/feedback_type_other" style="@style/Text.CarModeAboutButtonText"/>
                            </LinearLayout>
                        </LinearLayout>
                        <RelativeLayout android:background="#373c44" android:layout_width="match_parent" android:layout_height="60dp">
                            <ImageView android:id="@+id/imageview_edittext_email" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:src="@drawable/car_mode_feedback_write" android:layout_centerVertical="true"/>
                            <EditText android:textSize="20sp" android:textColor="#787d8c" android:gravity="top|left|center_vertical|center_horizontal|center" android:id="@+id/edittext_email" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:hint="@string/feedback_email_hint_carmode" android:singleLine="true" android:layout_toRightOf="@+id/imageview_edittext_email" android:layout_centerVertical="true" android:textCursorDrawable="@null"/>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/feedback_commit" android:background="@color/bnav_titlebar_bg" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:text="@string/feedback_commit" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
